Added user specific endpoint for retrieving payments
