# OpenAPI/payment_system-openapi_user.yaml
@@ -41,6 +41,50 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/User"
+  /api/v1/users/{userId}/payments:
+    get:
+      summary: "GET api/v1/users/{userId}/payments"
+      operationId: "getPaymentsforUserId"
+      parameters:
+        - name: "userId"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
+            format: "uuid"
+        - name: "page"
+          in: "query"
+          required: false
+          schema:
+            type: "integer"
+            format: "int32"
+            default: "0"
+        - name: "pageSize"
+          in: "query"
+          required: false
+          schema:
+            type: "integer"
+            format: "int32"
+            default: "20"
+        - name: "startDate"
+          in: "query"
+          required: false
+          schema:
+            type: "string"
+            format: "date-time"
+        - name: "endDate"
+          in: "query"
+          required: false
+          schema:
+            type: "string"
+            format: "date-time"
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/PaymentDTO"
 components:
   schemas:
     BigDecimal:
@@ -61,5 +105,22 @@ components:
         balance:
           $ref: "#/components/schemas/BigDecimal"
         createdAt:
+          type: "string"
+          format: "date-time"
+    PaymentDTO:
+      type: "object"
+      properties:
+        paymentId:
+          type: "string"
+          format: "uuid"
+        senderId:
+          type: "string"
+          format: "uuid"
+        receiverId:
+          type: "string"
+          format: "uuid"
+        amount:
+          $ref: "#/components/schemas/BigDecimal"
+        timestamp:
           type: "string"
           format: "date-time"
